# devinhouse-exercises

./: JSON1.txt  NEWJSON.txt  README.md  firsttest.html  index.html
DiH módulo 1/Semana 2/: index.html  index.js  index2.html  index3.html  style.css  style2.css
DiH módulo 1/Semana 4/: closures.html  index.js  otherclosures.js  sem4aula4.js  sem4aula4_2.js
Exercícios/: estilos.css  imagens.html  index.html
Module 1/Week 1/: estilos.css  imagens.html
Module 1/Week 2/: README.md  index.html  subscriptions.html
Module 1/Week 3/: ex02.html  ex06.html
Module 1/Week 4/: README.md
Module 1/Week 5/: README.md
Module 1/Week-1/: README.md  index.html
Module 1/Week-2/: ex09_10.html
Module 1/Week-3/: README.md  ex04.html  ex07.html  ex08-09-10.js
Module 1/Week-7/: package-lock.json  package.json
Module 2/Week-04/: exercicio01.py
Module 2/week-02/: exercicio01.py  exercicio03.py  exercicio07.py  exercicio09.py  plot4seatsfunc.py
Module 2/week-03/: exercicio02.py  exercicio04.py  exercicio06.py  (+2 more)
Module 2/week-10/flask-coursemodel/: .gitignore  app.py  pyproject.toml
Module 2/week-10/flask-coursemodel/src/app/: __init__.py
Module 2/week-10/flask-coursemodel/src/app/config/: __init__.py
Module 2/week-10/flask-coursemodel/src/app/controllers/: students.py
Module 2/week-10/flask-coursemodel/src/app/models/: course.py  department.py  lecture.py  student.py  subscription.py
Module 2/week-10/flask-coursemodel/src/app/routes/: __init__.py
Semana3/: ex01.html  ex02.html  ex03.html  ex04.html  ex05.html  ex06.html  ex07.html  ex08-09-10.html  ex08-09-10.js
(+172 files in other folders)
